--- a/#src/components/pageTitle.html
+++ b/#src/components/pageTitle.html
@@ -1,4 +1,4 @@
-<div class="page-title" style="background: url('img/@@image') 50% 50% / cover no-repeat;">
+<div class="page-title @@extraclass" style="background: url('img/@@image') 50% 50% / cover no-repeat;">
     <div class="container">
         <h1>@@title</h1>
     </div>
