--- a/#src/scss/components/header.scss
+++ b/#src/scss/components/header.scss
@@ -7,6 +7,7 @@
     &.white {
         position: relative;
         background-color: #fff;
+        border-bottom: 1px solid $maincolor;
         .white-logo {
             display: none;
         }
