--- a/#src/scss/media.scss
+++ b/#src/scss/media.scss
@@ -11,9 +11,19 @@
         }
     }
 }
+
 @media (max-width: $md2+px) {
     .header {
         padding: 15px;
+        &.white {
+            .header__container {
+                .burger {
+                    span {
+                        background-color: $darkcolor;
+                    }
+                }
+            }
+        }
         &.fixed {
             .header__container {
                 .navbar {
@@ -197,7 +207,19 @@
             }
         }
     }
+
+    .performance {
+        &-body {
+            &__item {
+                .performance-item__image {
+                    width: 200px;
+                    height: 200px;
+                }
+            }
+        }
+    }
 }
+
 @media (max-width: $md3+px) {
     .page__main-slider {
         margin-bottom: 40px;
@@ -272,7 +294,43 @@
             }
         }
     }
+
+    .performance {
+        &-body {
+            &__item {
+                flex-direction: column;
+                &:nth-child(2n) {
+                    .performance-item__description {
+                        order: 2;
+                    }
+                }
+                .performance-item__description {
+                    a {
+                        font-size: 18px;
+                    }
+                }
+            }
+        }
+        .load-more {
+            display: flex;
+            align-items: center;
+            width: 100%;
+            flex-direction: column;
+            font-size: 22px;
+            margin: 100px 0;
+        }
+    }
 }
+
+@media (max-width: 640px) {
+    .page-title {
+        height: 400px;
+        align-items: center;
+        text-align: center;
+        padding-bottom: 0;
+    }
+}
+
 @media (max-width: $md4+px) {
     .page__main-slider {
         .main-slider__slider {
