--- a/#src/scss/normalize.scss
+++ b/#src/scss/normalize.scss
@@ -2,6 +2,7 @@
 $mainfont: 'Avenir';
 $mainsize: 16px;
 $maincolor: #f5eedb;
+$accentcolor: #bd9c71;
 $whitecolor: #fefefe;
 $darkcolor: #423831;
 // MAIN FONT/COLORS
