--- a/#src/scss/ui.scss
+++ b/#src/scss/ui.scss
@@ -25,7 +25,7 @@ h6 {
 p,
 a {
     font-size: 16px;
-    line-height: 23px;
+    line-height: 27px;
 }
 small {
     font-weight: 800;
@@ -43,5 +43,21 @@ small {
         width: 110%;
         height: 1px;
         background-color: $darkcolor;
+    }
+}
+
+.section-header {
+    text-align: center;
+    margin-bottom: 80px;
+    h2 {
+        font-weight: 800;
+        font-size: 38px;
+        margin-bottom: 15px;
+    }
+    p {
+        margin: 0 auto;
+        font-weight: 300;
+        color: #000000;
+        max-width: 730px;
     }
 }
