--- a/Calarasi/css/style.css
+++ b/Calarasi/css/style.css
@@ -126,7 +126,7 @@ h5 {
 p,
 a {
   font-size: 16px;
-  line-height: 23px;
+  line-height: 27px;
 }
 
 small {
@@ -147,6 +147,24 @@ small::after {
   width: 110%;
   height: 1px;
   background-color: #423831;
+}
+
+.section-header {
+  text-align: center;
+  margin-bottom: 80px;
+}
+
+.section-header h2 {
+  font-weight: 800;
+  font-size: 38px;
+  margin-bottom: 15px;
+}
+
+.section-header p {
+  margin: 0 auto;
+  font-weight: 300;
+  color: #000000;
+  max-width: 730px;
 }
 
 .more {
@@ -601,6 +619,205 @@ small::after {
   100% {
     width: 100%;
   }
+}
+
+.about-section {
+  margin-bottom: 100px;
+}
+
+.about-section__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about-section__body .about-section__item {
+  text-align: center;
+}
+
+.about-section__body .about-section__item:not(:last-child) {
+  border-right: 1px solid #bd9c71;
+  padding-right: 75px;
+  margin-right: 75px;
+}
+
+.about-section__body .about-section__item h3 {
+  font-size: 28px;
+  margin-bottom: 15px;
+}
+
+.about-section__body .about-section__item p {
+  line-height: 27px;
+  font-weight: 300;
+  color: #000000;
+}
+
+.about-description {
+  margin-bottom: 100px;
+}
+
+.about-description__body .about-description__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+  text-align: center;
+}
+
+.about-description__body .about-description__item:not(:last-child) {
+  margin-bottom: 50px;
+}
+
+.about-description__body .about-description__item:nth-child(2n) img {
+  max-width: 665px;
+  width: 100%;
+  height: 445px;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+}
+
+.about-description__body .about-description__item img {
+  width: 445px;
+  height: 645px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.about-description__body .about-description__item .about-description__text p {
+  color: #000;
+  font-weight: 300;
+}
+
+.about-description__body .about-description__item .about-description__text p:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.about-description__body .about-description__item .about-description__text p em {
+  display: block;
+  margin: 10px 0;
+  color: #414141;
+  position: relative;
+  text-align: left;
+  padding-left: 25px;
+}
+
+.about-description__body .about-description__item .about-description__text p em::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background-color: #bd9c71;
+}
+
+.page__history-slider {
+  margin-bottom: 80px;
+}
+
+.page__history-slider .history-slider__body .history-slider__slider .slider-history__body {
+  overflow-x: hidden;
+}
+
+.page__history-slider .history-slider__body .history-slider__slider .slider-history__body .slider-history__slide {
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.page__history-slider .history-slider__body .history-slider__slider .slider-history__body .slider-history__slide h3 {
+  font-size: 28px;
+  margin-bottom: 15px;
+}
+
+.page__history-slider .history-slider__body .history-slider__slider .slider-history__body .slider-history__slide p {
+  color: #000000;
+}
+
+.page__history-slider .history-slider__body .history-slider__slider .slider-history__body .slider-history__slide .separator {
+  max-width: 140px;
+  width: 100%;
+  height: 1px;
+  background-color: #000;
+  margin-left: 12px;
+  position: relative;
+}
+
+.page__history-slider .history-slider__body .history-slider__slider .slider-history__body .slider-history__slide .separator::after {
+  content: '';
+  position: absolute;
+  bottom: 50%;
+  -webkit-transform: translate(-50%, 50%);
+      -ms-transform: translate(-50%, 50%);
+          transform: translate(-50%, 50%);
+  left: 50%;
+  width: 12px;
+  height: 12px;
+  border: 1px solid #000;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+.page__history-slider .history-slider__body .history-slider__slider .slider-history-controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding-right: 50px;
+  margin-top: 30px;
+}
+
+.page__history-slider .history-slider__body .history-slider__slider .slider-history-controls__arrows .slider-arrow__next {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.about-mini {
+  margin-top: 100px;
+  margin-bottom: 150px;
+}
+
+.about-mini__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+}
+
+.about-mini__body img {
+  width: 635px;
+  height: 325px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.about-mini__body .about-mini__description p {
+  text-align: center;
+  font-weight: 300;
+}
+
+.about-mini__body .about-mini__description p:not(:last-child) {
+  margin-bottom: 10px;
 }
 
 .performance-body__item {
@@ -1275,6 +1492,58 @@ small::after {
           transform: rotate(180deg);
 }
 
+.awards-section__header h2 {
+  font-weight: 800;
+  font-size: 38px;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.awards-section__body {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  place-items: center;
+  grid-gap: 40px;
+}
+
+.awards-section__item a img {
+  width: 170px;
+  height: 170px;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  -o-transition: transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.awards-section__item a img:hover {
+  -webkit-transform: scale(1.05);
+      -ms-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
+@media (min-width: 320px) {
+  .page__history-slider .history-slider__body .history-slider__slider .slider-history__body .slider-history__slide {
+    padding: 0 40px;
+  }
+
+  .page__history-slider .history-slider__body .history-slider__slider .slider-history__body .slider-history__slide .separator {
+    display: none;
+  }
+}
+
+@media (min-width: 479.98px) {
+  .page__history-slider .history-slider__body .history-slider__slider .slider-history__body .slider-history__slide {
+    padding: 0;
+  }
+}
+
+@media (min-width: 992.98px) {
+  .page__history-slider .history-slider__body .history-slider__slider .slider-history__body .slider-history__slide .separator {
+    display: block;
+  }
+}
+
 @media (max-width: 1122px) {
   .container {
     max-width: 970px;
@@ -1290,6 +1559,15 @@ small::after {
 
   .process .process-step .process-step__content {
     width: 60%;
+  }
+
+  .about-description__body .about-description__item:nth-child(2n) img {
+    max-width: 520px;
+  }
+
+  .about-mini__body img {
+    width: 555px;
+    height: 325px;
   }
 }
 
@@ -1316,6 +1594,22 @@ small::after {
 
   .process .process-step .process-description .process-description__text {
     font-size: calc( 10px + 6 * ((100vw - 320px) / 790));
+  }
+
+  .about-section {
+    margin-bottom: calc( 50px + 50 * ((100vw - 320px) / 790));
+  }
+
+  .about-description {
+    margin-bottom: calc( 50px + 50 * ((100vw - 320px) / 790));
+  }
+
+  .about-mini {
+    margin-top: calc( 50px + 50 * ((100vw - 320px) / 790));
+  }
+
+  .about-mini {
+    margin-bottom: calc( 80px + 70 * ((100vw - 320px) / 790));
   }
 
   .single {
@@ -1552,6 +1846,56 @@ small::after {
     width: 200px;
     height: 200px;
   }
+
+  .about-description__body .about-description__item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .about-description__body .about-description__item:nth-child(2n) img {
+    max-width: 100%;
+    height: 400px;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+
+  .about-description__body .about-description__item:nth-child(2n) .about-description__text {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+
+  .about-description__body .about-description__item img {
+    width: 100%;
+    height: 400px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+
+  .about-mini__body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 30px;
+  }
+
+  .about-mini__body img {
+    width: 100%;
+    height: 300px;
+  }
+
+  .about-section__body .about-section__item:not(:last-child) {
+    margin-right: 30px;
+    padding-right: 30px;
+  }
+
+  .awards-section__body {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 @media (max-width: 767.98px) {
@@ -1666,6 +2010,28 @@ small::after {
     font-size: 22px;
     margin: 100px 0;
   }
+
+  .about-section__body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 50px;
+  }
+
+  .about-section__body .about-section__item {
+    max-width: 70%;
+  }
+
+  .about-section__body .about-section__item {
+    max-width: 90%;
+  }
+
+  .about-section__body .about-section__item:not(:last-child) {
+    padding: 0;
+    margin: 0;
+    border-right: none;
+  }
 }
 
 @media (max-width: 640px) {
@@ -1676,6 +2042,10 @@ small::after {
             align-items: center;
     text-align: center;
     padding-bottom: 0;
+  }
+
+  .awards-section__body {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
@@ -1690,6 +2060,37 @@ small::after {
 
   .homepage-news .news-posts .post-item {
     width: 100%;
+  }
+
+  .about-description__body .about-description__item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .about-description__body .about-description__item:nth-child(2n) img {
+    height: 300px;
+  }
+
+  .about-description__body .about-description__item img {
+    height: 300px;
+  }
+
+  .about-description__body .about-description__item .about-description__text {
+    text-align: left;
+  }
+
+  .about-description__body .about-description__item .about-description__text p em {
+    padding-left: 15px;
+  }
+
+  .about-mini__body img {
+    height: 250px;
+  }
+
+  .about-mini__body .about-mini__description p {
+    text-align: left;
   }
 
   .gallery-slider__body .gallery-slider__slider {
