--- a/#src/scss/ui.scss
+++ b/#src/scss/ui.scss
@@ -1,32 +1,41 @@
 h1 {
+    font-weight: 800;
+    font-size: 38px;
+    line-height: 52px;
 }
+
 h2 {
     font-weight: 800;
     font-size: 28px;
     line-height: 37px;
 }
+
 h3 {
     font-weight: 800;
     font-size: 26px;
     line-height: 36px;
 }
+
 h4 {
     font-weight: 800;
     font-size: 24px;
     line-height: 31px;
 }
+
 h5 {
     font-weight: 800;
     font-size: 22px;
     line-height: 30px;
 }
-h6 {
-}
+
+h6 {}
+
 p,
 a {
     font-size: 16px;
     line-height: 27px;
 }
+
 small {
     font-weight: 800;
     font-size: 10px;
