--- a/Calarasi/css/style.css
+++ b/Calarasi/css/style.css
@@ -99,6 +99,12 @@ button {
   border: none;
 }
 
+h1 {
+  font-weight: 800;
+  font-size: 38px;
+  line-height: 52px;
+}
+
 h2 {
   font-weight: 800;
   font-size: 28px;
@@ -820,6 +826,323 @@ small::after {
   margin-bottom: 10px;
 }
 
+.blog-section {
+  margin-bottom: 100px;
+}
+
+.blog-section__header h2 {
+  text-align: left;
+}
+
+.blog-section__grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 50px;
+}
+
+.blog-section__grid .blog-item {
+  max-width: 83%;
+}
+
+.blog-section__grid .blog-item__thumbnail {
+  width: 100%;
+  height: 280px;
+}
+
+.blog-section__grid .blog-item__text {
+  background: #F8F8F8;
+  padding: 25px 18px 15px 15px;
+  -webkit-transform: translate(100px, -90px);
+      -ms-transform: translate(100px, -90px);
+          transform: translate(100px, -90px);
+  margin-bottom: -90px;
+}
+
+.blog-section__grid .blog-item__text .blog-item__title {
+  margin-bottom: 20px;
+}
+
+.blog-section__grid .blog-item__text .blog-item__excerpt {
+  margin-bottom: 18px;
+}
+
+.blog-section__grid .blog-item__text .blog-item__meta {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.blog-section__grid .blog-item__text .blog-item__meta .blog-item__time {
+  font-size: 12px;
+  font-weight: 300;
+  color: #423831;
+}
+
+.blog-section__grid .blog-item__text .blog-item__meta .blog-item__permalink {
+  color: #bd9c71;
+  -webkit-transition: color .3s;
+  -o-transition: color .3s;
+  transition: color .3s;
+}
+
+.blog-section__grid .blog-item__text .blog-item__meta .blog-item__permalink:hover {
+  color: #ab8450;
+}
+
+.blog-section .pagination {
+  margin-top: 100px;
+}
+
+.blog-section .pagination-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 40px;
+}
+
+.blog-section .pagination-list__item.prev {
+  margin-right: -20px;
+}
+
+.blog-section .pagination-list__item.next {
+  -webkit-transform: rotate(180deg) translateY(5px);
+      -ms-transform: rotate(180deg) translateY(5px);
+          transform: rotate(180deg) translateY(5px);
+  margin-left: -20px;
+}
+
+.blog-section .pagination-list__item.active {
+  position: relative;
+}
+
+.blog-section .pagination-list__item.active a {
+  color: #bd9c71;
+}
+
+.blog-section .pagination-list__item.active::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #bd9c71;
+}
+
+.blog-section .pagination-list__item a {
+  font-size: 24px;
+  color: #423831;
+  -webkit-transition: color .3s;
+  -o-transition: color .3s;
+  transition: color .3s;
+}
+
+.blog-section .pagination-list__item a:hover {
+  color: #bd9c71;
+}
+
+.collection-title {
+  text-align: center;
+  padding: 40px 0;
+}
+
+.collection-hero {
+  margin-bottom: 75px;
+}
+
+.collection-hero .collection-hero__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 60px;
+}
+
+.collection-hero .collection-hero__body .collection-hero__image {
+  width: 100%;
+  height: auto;
+}
+
+.collection-hero .collection-hero__body .collection-hero__info p {
+  margin-bottom: 30px;
+}
+
+.collection-hero .collection-hero__body .collection-hero__info .collection-info__block:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.collection-hero .collection-hero__body .collection-hero__info .collection-info__block h5 {
+  margin-bottom: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.collection-hero .collection-hero__body .collection-hero__info .collection-info__block h5 span {
+  color: #bd9c71;
+  margin-left: 10px;
+}
+
+.collection-hero .collection-hero__body .collection-hero__info .collection-info__block .collection-info__list .collection-info__item {
+  padding-left: 15px;
+  position: relative;
+  color: #bd9c71;
+  font-size: 22px;
+  font-weight: 500;
+}
+
+.collection-hero .collection-hero__body .collection-hero__info .collection-info__block .collection-info__list .collection-info__item:not(:last-child) {
+  margin-bottom: 5px;
+}
+
+.collection-hero .collection-hero__body .collection-hero__info .collection-info__block .collection-info__list .collection-info__item::before {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 40%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 8px;
+  height: 2px;
+  background-color: #bd9c71;
+}
+
+.collection-hero .collection-hero__body .collection-hero__info .collection-info__link {
+  margin-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  font-size: 22px;
+  color: #423831;
+}
+
+.collection-hero .collection-hero__body .collection-hero__info .collection-info__link svg {
+  -webkit-transform: translateY(-3px);
+      -ms-transform: translateY(-3px);
+          transform: translateY(-3px);
+  margin-left: 10px;
+}
+
+.collection-description {
+  margin-bottom: 75px;
+}
+
+.collection-description .collection-description__text {
+  border-top: 1px solid #bd9c71;
+  padding-top: 30px;
+  max-width: 920px;
+  margin: 0 auto;
+}
+
+.collection-description .collection-description__text p {
+  text-align: center;
+}
+
+.collection-description .collection-description__text p:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.page__product-slider {
+  margin-bottom: 100px;
+}
+
+.page__product-slider .product-slider__title {
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.page__product-slider .product-slider__body .product-slider__slider .slider-product__body {
+  max-width: 770px;
+  margin: 0 auto;
+  overflow-x: hidden;
+}
+
+.page__product-slider .product-slider__body .product-slider__slider .slider-product__body .slider-product__slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: calc(400px + 50px);
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-transform: translateY(-50px);
+      -ms-transform: translateY(-50px);
+          transform: translateY(-50px);
+}
+
+.page__product-slider .product-slider__body .product-slider__slider .slider-product__body .slider-product__slide img {
+  width: 350px;
+  height: 400px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.page__product-slider .product-slider__body .product-slider__slider .slider-product__body .slider-product__slide .product-description {
+  text-align: center;
+  background-color: #F8F8F8;
+  padding: 20px;
+  -webkit-transform: translate(-50px, 50px);
+      -ms-transform: translate(-50px, 50px);
+          transform: translate(-50px, 50px);
+  margin-right: -50px;
+}
+
+.page__product-slider .product-slider__body .product-slider__slider .slider-product__body .slider-product__slide .product-description h5 {
+  margin-bottom: 15px;
+}
+
+.page__product-slider .product-slider__body .product-slider__slider .slider-product-controls {
+  margin-top: 50px;
+}
+
+.page__product-slider .product-slider__body .product-slider__slider .slider-product-controls__arrows {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 30px;
+}
+
+.page__product-slider .product-slider__body .product-slider__slider .slider-product-controls__arrows .slider-arrow__next {
+  -webkit-transform: rotate(180deg) translateY(7px);
+      -ms-transform: rotate(180deg) translateY(7px);
+          transform: rotate(180deg) translateY(7px);
+}
+
+.swiper-button-disabled {
+  opacity: .5;
+}
+
 .performance-body__item {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -901,7 +1224,6 @@ small::after {
 
 .horizontal-wrapper {
   margin-top: -75px;
-  height: 100vh;
 }
 
 .horizontal-wrapper__menu {
@@ -938,53 +1260,6 @@ small::after {
 
 .horizontal-wrapper__menu .menu-list__item .menu-list__link {
   color: #423831;
-}
-
-.horizontal-wrapper .horizontal-content .cos {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  max-height: 100%;
-}
-
-.horizontal-wrapper .horizontal-content__hero {
-  padding: 5px;
-  min-width: 100%;
-  height: 88vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.horizontal-wrapper .horizontal-content__hero h2 {
-  font-weight: 800;
-  font-size: 68px;
-  line-height: 93px;
-  color: #ffffff;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.wrapper {
-  height: 100%;
-}
-
-.wrapper #main-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .single {
@@ -1569,6 +1844,12 @@ small::after {
     width: 555px;
     height: 325px;
   }
+
+  .blog-section__grid .blog-item__text {
+    -webkit-transform: translate(70px, -90px);
+        -ms-transform: translate(70px, -90px);
+            transform: translate(70px, -90px);
+  }
 }
 
 @media (max-width: 1110px) {
@@ -1610,6 +1891,26 @@ small::after {
 
   .about-mini {
     margin-bottom: calc( 80px + 70 * ((100vw - 320px) / 790));
+  }
+
+  .blog-section {
+    margin-bottom: calc( 50px + 50 * ((100vw - 320px) / 790));
+  }
+
+  .blog-section .pagination {
+    margin-top: calc( 50px + 50 * ((100vw - 320px) / 790));
+  }
+
+  .collection-hero {
+    margin-bottom: calc( 40px + 35 * ((100vw - 320px) / 790));
+  }
+
+  .collection-description {
+    margin-bottom: calc( 40px + 35 * ((100vw - 320px) / 790));
+  }
+
+  .page__product-slider {
+    margin-bottom: calc( 40px + 60 * ((100vw - 320px) / 790));
   }
 
   .single {
@@ -1893,6 +2194,40 @@ small::after {
     padding-right: 30px;
   }
 
+  .blog-section__grid .blog-item {
+    max-width: 90%;
+  }
+
+  .blog-section__grid .blog-item {
+    max-width: 70%;
+  }
+
+  .blog-section__grid .blog-item__text {
+    -webkit-transform: translate(30px, -90px);
+        -ms-transform: translate(30px, -90px);
+            transform: translate(30px, -90px);
+  }
+
+  .blog-section__grid .blog-item__text .blog-item__title {
+    font-size: 22px;
+  }
+
+  .collection-hero .collection-hero__body {
+    gap: 30px;
+  }
+
+  .collection-hero .collection-hero__body .collection-hero__image {
+    width: 50%;
+  }
+
+  .collection-hero .collection-hero__body .collection-hero__info .collection-info__block .collection-info__list .collection-info__item {
+    font-size: 18px;
+  }
+
+  .collection-hero .collection-hero__body .collection-hero__info .collection-info__link {
+    margin-top: 30px;
+  }
+
   .awards-section__body {
     grid-template-columns: repeat(3, 1fr);
   }
@@ -2032,6 +2367,58 @@ small::after {
     margin: 0;
     border-right: none;
   }
+
+  .blog-section__grid {
+    grid-template-columns: repeat(1, 1fr);
+    place-items: center;
+  }
+
+  .blog-section__grid .blog-item__text {
+    -webkit-transform: translate(0);
+        -ms-transform: translate(0);
+            transform: translate(0);
+    margin-bottom: 0;
+  }
+
+  .collection-hero .collection-hero__body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .collection-hero .collection-hero__body .collection-hero__image {
+    width: 65%;
+  }
+
+  .page__product-slider .product-slider__body .product-slider__slider {
+    padding: 0 100px;
+  }
+
+  .page__product-slider .product-slider__body .product-slider__slider .slider-product__body .slider-product__slide {
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
+    height: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .page__product-slider .product-slider__body .product-slider__slider .slider-product__body .slider-product__slide img {
+    width: 100%;
+  }
+
+  .page__product-slider .product-slider__body .product-slider__slider .slider-product__body .slider-product__slide .product-description {
+    -webkit-transform: translate(0);
+        -ms-transform: translate(0);
+            transform: translate(0);
+    margin-right: 0;
+  }
 }
 
 @media (max-width: 640px) {
@@ -2042,6 +2429,14 @@ small::after {
             align-items: center;
     text-align: center;
     padding-bottom: 0;
+  }
+
+  .blog-section__grid .blog-item {
+    max-width: 80%;
+  }
+
+  .page__product-slider .product-slider__body .product-slider__slider {
+    padding: 0 50px;
   }
 
   .awards-section__body {
@@ -2091,6 +2486,31 @@ small::after {
 
   .about-mini__body .about-mini__description p {
     text-align: left;
+  }
+
+  .blog-section__grid .blog-item {
+    max-width: 100%;
+  }
+
+  .blog-section__grid .blog-item__text {
+    padding: 15px;
+  }
+
+  .blog-section__grid .blog-item__text .blog-item__title {
+    margin-bottom: 10px;
+  }
+
+  .collection-hero .collection-hero__body .collection-hero__image {
+    width: 100%;
+  }
+
+  .page__product-slider .product-slider__body .product-slider__slider {
+    padding: 0 20px;
+  }
+
+  .page__product-slider .product-slider__body .product-slider__slider .slider-product__body .slider-product__slide img {
+    width: 100%;
+    height: 300px;
   }
 
   .gallery-slider__body .gallery-slider__slider {
