--- a/#src/components/awards.html
+++ b/#src/components/awards.html
@@ -5,27 +5,27 @@
         </div>
         <div class="awards-section__body">
             <div class="awards-section__item">
-                <a href="#">
+                <a href="../performance-single.html">
                     <img src="../img/medal.png" alt="award">
                 </a>
             </div>
             <div class="awards-section__item">
-                <a href="#">
+                <a href="../performance-single.html">
                     <img src="../img/medal2.png" alt="award">
                 </a>
             </div>
             <div class="awards-section__item">
-                <a href="#">
+                <a href="../performance-single.html">
                     <img src="../img/medal3.png" alt="award">
                 </a>
             </div>
             <div class="awards-section__item">
-                <a href="#">
+                <a href="../performance-single.html">
                     <img src="../img/medal.png" alt="award">
                 </a>
             </div>
             <div class="awards-section__item">
-                <a href="#">
+                <a href="../performance-single.html">
                     <img src="../img/medal2.png" alt="award">
                 </a>
             </div>
