--- a/#src/components/footer.html
+++ b/#src/components/footer.html
@@ -15,7 +15,7 @@
                     <li class="footer-list__item"><a href="#" class="footer-list__link">Catalogul produselor</a></li>
                 </ul>
             </div>
-    
+
             <div class="footer-column">
                 <h5>Tehnologia</h5>
                 <ul class="footer-list">
@@ -27,13 +27,13 @@
                     <li class="footer-list__item"><a href="#" class="footer-list__link">Turnare in sticle</a></li>
                 </ul>
             </div>
-    
+
             <div class="footer-logo">
-                <a href="#">
+                <a href="/">
                     <img src="img/footer-logo.png" alt="logo-dark">
                 </a>
             </div>
-    
+
             <div class="footer-column">
                 <h5>Produse</h5>
                 <ul class="footer-list">
@@ -48,7 +48,7 @@
                     <li class="footer-list__item"><a href="#" class="footer-list__link">Catalogul produselor</a></li>
                 </ul>
             </div>
-    
+
             <div class="footer-column">
                 <h5>Tehnologia</h5>
                 <ul class="footer-list">
