--- a/#src/components/header-white.html
+++ b/#src/components/header-white.html
@@ -1,7 +1,7 @@
 <header class="header white">
     <div class="header__container">
         <div class="header__logo">
-            <a href="#">
+            <a href="/">
                 <img class="white-logo" src="img/logo-white.png" alt="logo white">
                 <img class="dark-logo" src="img/logo-dark.png" alt="logo dark">
             </a>
@@ -9,13 +9,13 @@
 
         <nav class="navbar">
             <ul class="navbar__menu">
-                <li class="menu__item active"><a href="#" class="menu__link">Despre Noi</a></li>
+                <li class="menu__item active"><a href="../about.html" class="menu__link">Despre Noi</a></li>
                 <li class="menu__item"><a href="#" class="menu__link">Tehnologie</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Performanta</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Noutati</a></li>
+                <li class="menu__item"><a href="../performance.html" class="menu__link">Performanta</a></li>
+                <li class="menu__item"><a href="../blog.html" class="menu__link">Noutati</a></li>
                 <li class="menu__item"><a href="#" class="menu__link">Produse</a></li>
                 <li class="menu__item"><a href="#" class="menu__link">Degustare</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Contacte</a></li>
+                <li class="menu__item"><a href="../contact.html" class="menu__link">Contacte</a></li>
             </ul>
         </nav>
 
