--- a/#src/components/header.html
+++ b/#src/components/header.html
@@ -1,23 +1,23 @@
 <header class="header">
     <div class="header__container">
         <div class="header__logo">
-            <a href="#">
+            <a href="/">
                 <img class="white-logo" src="img/logo-white.png" alt="logo white">
                 <img class="dark-logo" src="img/logo-dark.png" alt="logo dark">
             </a>
         </div>
 
-        
+
 
         <nav class="navbar">
             <ul class="navbar__menu">
-                <li class="menu__item active"><a href="#" class="menu__link">Despre Noi</a></li>
+                <li class="menu__item active"><a href="../about.html" class="menu__link">Despre Noi</a></li>
                 <li class="menu__item"><a href="#" class="menu__link">Tehnologie</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Performanta</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Noutati</a></li>
+                <li class="menu__item"><a href="../performance.html" class="menu__link">Performanta</a></li>
+                <li class="menu__item"><a href="../blog.html" class="menu__link">Noutati</a></li>
                 <li class="menu__item"><a href="#" class="menu__link">Produse</a></li>
                 <li class="menu__item"><a href="#" class="menu__link">Degustare</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Contacte</a></li>
+                <li class="menu__item"><a href="../contact.html" class="menu__link">Contacte</a></li>
             </ul>
         </nav>
 
