--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -3,7 +3,6 @@
 @import 'normalize';
 @import 'ui';
 @import 'media';
-
 @import 'home';
 @import 'about';
 @import 'blog';
@@ -13,9 +12,10 @@
 @import 'performance-single';
 @import 'technology';
 @import 'single';
-
+@import 'taste';
 @import './components/header.scss';
 @import './components/footer.scss';
 @import './components/pageTitle.scss';
 @import './components/gallerySlider.scss';
 @import './components/awards.scss';
+@import './components/choices.min.scss';
