--- a/#src/scss/components/pageTitle.scss
+++ b/#src/scss/components/pageTitle.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: flex-end;
     padding-bottom: 90px;
-    margin-bottom: 75px;
+    @include adaptiv-value('margin-bottom', 75, 40, 1);
     &.center {
         align-items: center;
         text-align: center;
