--- a/#src/scss/contact.scss
+++ b/#src/scss/contact.scss
@@ -8,14 +8,13 @@
     height: 100%;
     margin: 0 auto;
     background-color: #ffffff;
-    padding: 27px 0 40px 0;
+    padding: 27px 20px 40px;
     margin-top: -100px;
     .contact-title {
         max-width: 481px;
         margin: 0 auto;
         margin-bottom: 31px;
-        font-weight: 800;
-        font-size: 38px;
+        @include adaptiv-value('font-size', 38, 32, 1);
         line-height: 52px;
         text-align: center;
         color: #000000;
@@ -50,7 +49,7 @@
     padding-top: 40px;
     .contact-block__title {
         font-weight: 500;
-        font-size: 38px;
+        @include adaptiv-value('font-size', 38, 32, 1);
         line-height: 52px;
         text-align: center;
         color: #000000;
