--- a/#src/scss/media.scss
+++ b/#src/scss/media.scss
@@ -364,6 +364,53 @@
             margin: 100px 0;
         }
     }
+
+    .contact-form {
+        transform: translateY(0);
+        margin-top: 0;
+        margin-bottom: 50px;
+        .contact-title {
+            max-width: 100%;
+        }
+        .contact-subtitle {
+            max-width: 100%;
+        }
+        .contact-form__body {
+            max-width: 100%;
+            grid-gap: 35px;
+        }
+    }
+
+    .contact-block {
+        transform: translateY(0);
+        height: 100%;
+        padding: 70px 0;
+        .contact-block__contacts {
+            margin-top: 30px;
+            flex-direction: column;
+            .block-contacts__item {
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+                svg {
+                    width: 32px;
+                    height: 32px;
+                }
+                &:not(:last-child) {
+                    margin-right: 0;
+                    border-right: none;
+                    padding-right: 0;
+                    margin-bottom: 40px;
+                }
+                .contact-item__text {
+                    margin-left: 10px;
+                    font-size: 18px;
+                    color: $darkcolor;
+                    margin-top: 15px;
+                }
+            }
+        }
+    }
 }
 
 @media (max-width: 640px) {
@@ -372,6 +419,24 @@
         align-items: center;
         text-align: center;
         padding-bottom: 0;
+    }
+
+    .contact-form {
+        transform: translateY(0);
+        margin-top: 0;
+        margin-bottom: 50px;
+        .contact-title {
+            max-width: 100%;
+        }
+        .contact-subtitle {
+            max-width: 100%;
+        }
+        .contact-form__body {
+            grid-template-columns: repeat(1, 1fr);
+        }
+        .col-2 {
+            grid-column: 1 span;
+        }
     }
 }
 
