--- a/#src/scss/ui.scss
+++ b/#src/scss/ui.scss
@@ -121,7 +121,10 @@ textarea {
 
 .choices {
     .choices__inner {
-        padding: 10px;
+        padding: 10px 0;
+        .choices__list {
+            padding: 13px 0 3px;
+        }
     }
     &.is-open {
         &::after {
@@ -132,19 +135,20 @@ textarea {
         content: url(../img/choice.svg) !important;
         border: none;
         right: 30px !important;
-        top: 30% !important;
+        top: 45% !important;
         border-style: none !important;
         border-color: transparent !important;
     }
     .choices__inner {
         border: none;
         border-bottom: 1px solid #d7d7d7 !important;
+        border-radius: 0;
         background: none;
         padding-left: 0;
     }
 }
 
-.col-1 {
+.col-2 {
     grid-column: 2 span;
 }
 
