--- a/Calarasi/css/style.css
+++ b/Calarasi/css/style.css
@@ -266,7 +266,11 @@ textarea {
 }
 
 .choices .choices__inner {
-  padding: 10px;
+  padding: 10px 0;
+}
+
+.choices .choices__inner .choices__list {
+  padding: 13px 0 3px;
 }
 
 .choices.is-open::after {
@@ -279,7 +283,7 @@ textarea {
   content: url(../img/choice.svg) !important;
   border: none;
   right: 30px !important;
-  top: 30% !important;
+  top: 45% !important;
   border-style: none !important;
   border-color: transparent !important;
 }
@@ -287,11 +291,12 @@ textarea {
 .choices .choices__inner {
   border: none;
   border-bottom: 1px solid #d7d7d7 !important;
+  border-radius: 0;
   background: none;
   padding-left: 0;
 }
 
-.col-1 {
+.col-2 {
   grid-column: 2 span;
 }
 
@@ -1349,7 +1354,7 @@ textarea {
   height: 100%;
   margin: 0 auto;
   background-color: #ffffff;
-  padding: 27px 0 40px 0;
+  padding: 27px 20px 40px;
   margin-top: -100px;
 }
 
@@ -1357,7 +1362,6 @@ textarea {
   max-width: 481px;
   margin: 0 auto;
   margin-bottom: 31px;
-  font-weight: 800;
   font-size: 38px;
   line-height: 52px;
   text-align: center;
@@ -2670,6 +2674,14 @@ textarea {
     margin-bottom: calc( 40px + 60 * ((100vw - 320px) / 790));
   }
 
+  .contact-form .contact-title {
+    font-size: calc( 32px + 6 * ((100vw - 320px) / 790));
+  }
+
+  .contact-block .contact-block__title {
+    font-size: calc( 32px + 6 * ((100vw - 320px) / 790));
+  }
+
   .single {
     padding-top: calc( 40px + 60 * ((100vw - 320px) / 790));
   }
@@ -2680,6 +2692,10 @@ textarea {
 
   .single__content img {
     height: calc( 300px + 100 * ((100vw - 320px) / 790));
+  }
+
+  .page-title {
+    margin-bottom: calc( 40px + 35 * ((100vw - 320px) / 790));
   }
 
   .page-title h1 {
@@ -3103,6 +3119,75 @@ textarea {
     margin: 100px 0;
   }
 
+  .contact-form {
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
+    margin-top: 0;
+    margin-bottom: 50px;
+  }
+
+  .contact-form .contact-title {
+    max-width: 100%;
+  }
+
+  .contact-form .contact-subtitle {
+    max-width: 100%;
+  }
+
+  .contact-form .contact-form__body {
+    max-width: 100%;
+    grid-gap: 35px;
+  }
+
+  .contact-block {
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
+    height: 100%;
+    padding: 70px 0;
+  }
+
+  .contact-block .contact-block__contacts {
+    margin-top: 30px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .contact-block .contact-block__contacts .block-contacts__item {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .contact-block .contact-block__contacts .block-contacts__item svg {
+    width: 32px;
+    height: 32px;
+  }
+
+  .contact-block .contact-block__contacts .block-contacts__item:not(:last-child) {
+    margin-right: 0;
+    border-right: none;
+    padding-right: 0;
+    margin-bottom: 40px;
+  }
+
+  .contact-block .contact-block__contacts .block-contacts__item .contact-item__text {
+    margin-left: 10px;
+    font-size: 18px;
+    color: #423831;
+    margin-top: 15px;
+  }
+
   .about-section__body {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -3186,6 +3271,30 @@ textarea {
             align-items: center;
     text-align: center;
     padding-bottom: 0;
+  }
+
+  .contact-form {
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
+    margin-top: 0;
+    margin-bottom: 50px;
+  }
+
+  .contact-form .contact-title {
+    max-width: 100%;
+  }
+
+  .contact-form .contact-subtitle {
+    max-width: 100%;
+  }
+
+  .contact-form .contact-form__body {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .contact-form .col-2 {
+    grid-column: 1 span;
   }
 
   .blog-section__grid .blog-item {
