--- a/#src/scss/ui.scss
+++ b/#src/scss/ui.scss
@@ -201,3 +201,20 @@ textarea {
         font-size: 14px;
     }
 }
+
+.overlay{
+    position: fixed;
+    inset: 0;
+    background-color: #000;
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .3s, visibility .3s;
+    &.open{
+        opacity: .5;
+        visibility: visible;
+    }
+}
+
