--- a/Calarasi/css/style.css
+++ b/Calarasi/css/style.css
@@ -372,6 +372,25 @@ textarea {
   font-size: 14px;
 }
 
+.overlay {
+  position: fixed;
+  inset: 0;
+  background-color: #000;
+  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: opacity .3s, visibility .3s;
+  -o-transition: opacity .3s, visibility .3s;
+  transition: opacity .3s, visibility .3s;
+}
+
+.overlay.open {
+  opacity: .5;
+  visibility: visible;
+}
+
 .more {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -824,6 +843,78 @@ textarea {
   100% {
     width: 100%;
   }
+}
+
+.modal {
+  width: 550px;
+  height: 400px;
+  background-color: #F5EEDB;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 1001;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: opacity .3s, visibility .3s;
+  -o-transition: opacity .3s, visibility .3s;
+  transition: opacity .3s, visibility .3s;
+  text-align: center;
+}
+
+.modal.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal img {
+  margin-top: 31px;
+}
+
+.modal h4 {
+  margin-top: 24px;
+  font-weight: 400;
+  margin-bottom: 30px;
+}
+
+.modal .choice-selector .modal-form .choice-modal {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.modal .choice-selector .modal-form .choice-selector__block {
+  max-width: 71px;
+}
+
+.modal .choice-selector .modal-form .choice-selector__block:not(:last-child) {
+  margin-right: 20px;
+}
+
+.modal .choice-selector .modal-form .choice-selector__block .choice-value {
+  background: none;
+  color: #423831;
+}
+
+.modal .choice-selector .modal-form .choice-selector__block .choice-value::-webkit-input-placeholder {
+  color: #423831;
+}
+
+.modal .choice-selector .modal-form .choice-selector__block .choice-value::-moz-placeholder {
+  color: #423831;
+}
+
+.modal .choice-selector .modal-form .choice-selector__block .choice-value:-ms-input-placeholder {
+  color: #423831;
+}
+
+.modal .choice-selector .modal-form .choice-selector__block .choice-value::-ms-input-placeholder {
+  color: #423831;
+}
+
+.modal .choice-selector .modal-form .choice-selector__block .choice-value::placeholder {
+  color: #423831;
 }
 
 .about-section {
